configuration/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: microservices.info
      http:
        paths:
          - path: /account
            backend:
              serviceName: account
              servicePort: 8085
          - path: /order
            backend:
              serviceName: order
              servicePort: 8092
          - path: /feign
            backend:
              serviceName: feign
              servicePort: 8099
          - path: /uaa
            backend:
              serviceName: auth
              servicePort: 8084
